--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,26 @@
+JWT_SECRET= test2022
+JWT_SECRET_FOR_ADMIN= test2023
 
+DEV_DB_HOST= 127.0.0.1
+DEV_DB_DATABASE= image_db_dev
+DEV_DB_USERNAME= root
+DEV_DB_PASSWORD= 1234
+DEV_DB_PORT= 3309
+
+TEST_DB_HOST= 
+TEST_DB_DATABASE=
+TEST_DB_USERNAME= 
+TEST_DB_PASSWORD= 
+
+PROD_DB_HOST= 
+PROD_DB_DATABASE= 
+PROD_DB_USERNAME= 
+PROD_DB_PASSWORD=
+
+PROD_AWS_IMAGE_BUCKET= 
+PROD_AWS_S3_ACCESS_KEY= 
+PROD_AWS_S3_SECRET_KEY=
+
+PROD_NCP_IMAGE_BUCKET= 
+PROD_NCP_ACCESS_KEY= 
+PROD_NCP_SECRET_KEY= 
